[gd_scene load_steps=35 format=2]

[ext_resource path="res://forms/admin_form.gd" type="Script" id=1]
[ext_resource path="res://assets/images/PCF_Logo.png" type="Texture" id=2]
[ext_resource path="res://audio/audio_stream_random_player.gd" type="Script" id=3]
[ext_resource path="res://resources/owned_clubs/OwnedClubs.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/free_agents/free_agents.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/members/members.gd" type="Script" id=6]
[ext_resource path="res://resources/items/items.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/UI/AdminBadge.svg" type="Texture" id=8]
[ext_resource path="res://ui_classes/WheelButtons.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui_classes/TabButtons.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/UI/Clubs.svg" type="Texture" id=11]
[ext_resource path="res://resources/user_clubs/user_clubs.tscn" type="PackedScene" id=12]
[ext_resource path="res://dialogs/add_member_dialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/clubs/clubs.gd" type="Script" id=14]
[ext_resource path="res://dialogs/edit_club_dialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://resources/invites/invites.gd" type="Script" id=16]
[ext_resource path="res://resources/users/users.tscn" type="PackedScene" id=17]
[ext_resource path="res://dialogs/create_club_dialog.tscn" type="PackedScene" id=18]
[ext_resource path="res://dialogs/join_club_dialog.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialogs/edit_user_dialog.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/images/UI/Users.svg" type="Texture" id=21]
[ext_resource path="res://assets/music/music1.mp3" type="AudioStream" id=22]
[ext_resource path="res://assets/images/UI/Marketplace.svg" type="Texture" id=23]
[ext_resource path="res://themes/default.tres" type="Theme" id=24]
[ext_resource path="res://assets/music/music2.mp3" type="AudioStream" id=25]
[ext_resource path="res://assets/music/music4.mp3" type="AudioStream" id=26]
[ext_resource path="res://assets/music/music3.mp3" type="AudioStream" id=27]
[ext_resource path="res://assets/images/UI/Transactions.svg" type="Texture" id=28]
[ext_resource path="res://ui_classes/VButtonContainer.gd" type="Script" id=29]

[sub_resource type="Gradient" id=8]
interpolation_mode = 2
colors = PoolColorArray( 0.158875, 0.314679, 0.535156, 1, 0, 0.028, 0.28, 1 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 8 )
use_hdr = true

[sub_resource type="StyleBoxTexture" id=10]
texture = SubResource( 11 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="ButtonGroup" id=12]

[sub_resource type="ButtonGroup" id=13]

[node name="AdminForm" type="Control" groups=["admin_form", "login_ready"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 24 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1366.0
margin_bottom = 73.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Header"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1356.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1336.0
margin_bottom = 52.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_right = 1306.0
margin_bottom = 42.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Header/PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 42.0
rect_min_size = Vector2( 45, 29 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer/Header/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 196.0
margin_bottom = 42.0
size_flags_vertical = 3
theme_type_variation = "Titles"
text = "dashboard"
align = 1
valign = 1
uppercase = true

[node name="AccountButton" type="MenuButton" parent="VBoxContainer/Header/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1191.0
margin_right = 1286.0
margin_bottom = 42.0
rect_min_size = Vector2( 95, 0 )
size_flags_horizontal = 10
text = "Name"
icon = ExtResource( 8 )
flat = false
items = [ "Refresh", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "Logout", null, 0, false, false, 2, 0, null, "", false ]

[node name="Tabs" type="MarginContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Tabs"]
margin_left = 10.0
margin_right = 1356.0
margin_bottom = 681.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1336.0
margin_bottom = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TabHeaders" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer"]
margin_right = 1326.0
margin_bottom = 35.0

[node name="Clubs" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_right = 262.0
margin_bottom = 35.0
pressed = true
group = SubResource( 12 )
icon = ExtResource( 11 )
tab_container = NodePath("../../TabContainer")

[node name="Users" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders" instance=ExtResource( 10 )]
margin_left = 266.0
margin_right = 528.0
margin_bottom = 35.0
group = SubResource( 12 )
text = "Users"
icon = ExtResource( 21 )
tab_container = NodePath("../../TabContainer")

[node name="Marketplace" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders" instance=ExtResource( 10 )]
margin_left = 532.0
margin_right = 794.0
margin_bottom = 35.0
group = SubResource( 12 )
text = "Marketplace"
icon = ExtResource( 23 )
tab_container = NodePath("../../TabContainer")

[node name="Transactions" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders" instance=ExtResource( 10 )]
margin_left = 798.0
margin_right = 1060.0
margin_bottom = 35.0
group = SubResource( 12 )
text = "Trasactions"
icon = ExtResource( 28 )
tab_container = NodePath("../../TabContainer")

[node name="FreeAgents" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders" instance=ExtResource( 10 )]
margin_left = 1064.0
margin_right = 1326.0
margin_bottom = 35.0
group = SubResource( 12 )
text = "Free Agents"
icon = ExtResource( 21 )
tab_container = NodePath("../../TabContainer")

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 35.0
margin_right = 1326.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = false
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clubs" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Clubs" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs" groups=["login_ready"]]
margin_right = 420.0
margin_bottom = 586.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
script = ExtResource( 14 )

[node name="Label" type="Label" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs"]
margin_right = 420.0
margin_bottom = 23.0
text = "Clubs"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs"]
margin_top = 27.0
margin_right = 420.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Clubs" type="ScrollContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs"]
margin_top = 35.0
margin_right = 420.0
margin_bottom = 549.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs/Clubs"]
margin_right = 420.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs/Clubs/VBoxContainer"]
margin_left = 110.0
margin_right = 310.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
theme_type_variation = "ListButton"
group = SubResource( 13 )
text = "Name"

[node name="CreateNewButton" type="Button" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs"]
margin_top = 553.0
margin_right = 420.0
margin_bottom = 586.0
rect_min_size = Vector2( 160, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "GreenButton"
text = "âž• Create Club "
icon = ExtResource( 2 )
icon_align = 2
expand_icon = true

[node name="CanvasLayer" type="CanvasLayer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs"]
visible = false

[node name="ClubsMenu" type="PopupMenu" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs/CanvasLayer"]
visible = true
margin_right = 130.0
margin_bottom = 92.0
theme = ExtResource( 24 )
items = [ "Edit", null, 0, false, false, 0, 0, null, "", false, "Delete", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Copy ID", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs"]
margin_left = 424.0
margin_right = 428.0
margin_bottom = 586.0

[node name="Invites" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs"]
margin_left = 432.0
margin_right = 853.0
margin_bottom = 586.0
rect_min_size = Vector2( 148, 0 )
size_flags_horizontal = 3
script = ExtResource( 16 )

[node name="Label" type="Label" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites"]
margin_right = 421.0
margin_bottom = 23.0
text = "Invites"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites"]
margin_top = 27.0
margin_right = 421.0
margin_bottom = 31.0

[node name="Invites" type="ScrollContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites"]
margin_top = 35.0
margin_right = 421.0
margin_bottom = 586.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites/Invites"]
margin_right = 421.0
size_flags_horizontal = 3
script = ExtResource( 29 )
toggle_mode = true
default = 0
null_is_allowed = true

[node name="CreateNewButton" type="Button" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites"]
visible = false
margin_top = 570.0
margin_right = 126.0
margin_bottom = 590.0
text = "Create a invite"

[node name="CanvasLayer" type="CanvasLayer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites"]

[node name="ClubsMenu" type="PopupMenu" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites/CanvasLayer"]
margin_right = 130.0
margin_bottom = 92.0
theme = ExtResource( 24 )
items = [ "Edit", null, 0, false, false, 0, 0, null, "", false, "Delete", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Copy ID", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs"]
margin_left = 857.0
margin_right = 861.0
margin_bottom = 586.0

[node name="Members" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs" groups=["login_ready"]]
margin_left = 865.0
margin_right = 1286.0
margin_bottom = 586.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 7
script = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members"]
margin_right = 421.0
margin_bottom = 23.0
text = "Members"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members"]
margin_top = 27.0
margin_right = 421.0
margin_bottom = 31.0

[node name="Members" type="ScrollContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members"]
margin_top = 35.0
margin_right = 421.0
margin_bottom = 586.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members/Members"]
margin_right = 421.0
margin_bottom = 551.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 29 )
toggle_mode = true
default = 0
null_is_allowed = true

[node name="Add" type="Button" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members"]
visible = false
margin_top = 570.0
margin_right = 126.0
margin_bottom = 590.0
text = "Invite a member"

[node name="CanvasLayer" type="CanvasLayer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members"]

[node name="MembersMenu" type="PopupMenu" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members/CanvasLayer"]
margin_right = 130.0
margin_bottom = 92.0
theme = ExtResource( 24 )
items = [ "Edit", null, 0, false, false, 0, 0, null, "", false, "Kick", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Copy ID", null, 0, false, false, 3, 0, null, "", false ]

[node name="Users" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 10

[node name="Users" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users" groups=["login_ready"] instance=ExtResource( 17 )]
margin_left = 0.0
margin_right = 126.0
margin_bottom = 641.0

[node name="OwnedClubs" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users" groups=["login_ready"] instance=ExtResource( 4 )]
margin_left = 1062.0
margin_right = 1188.0

[node name="UserClubs" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users" groups=["login_ready"] instance=ExtResource( 12 )]
margin_left = 1198.0
margin_right = 1324.0
margin_bottom = 641.0

[node name="Marketplace" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Items" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Marketplace" groups=["login_ready"] instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1324.0
margin_bottom = 641.0
size_flags_horizontal = 3

[node name="Transactions" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Transactions"]
margin_right = 1324.0
margin_bottom = 641.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Coming soon!"
align = 1
valign = 1

[node name="FreeAgents" type="HBoxContainer" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Agents" parent="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/FreeAgents" groups=["login_ready"] instance=ExtResource( 5 )]
margin_left = 0.0
margin_right = 126.0
margin_bottom = 641.0

[node name="WheelButtons" parent="." instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false
margin_left = 16.0
margin_top = 121.0
margin_right = -16.0
margin_bottom = -10.0
button_container = NodePath("../VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabHeaders")

[node name="Modals" type="CanvasLayer" parent="."]

[node name="CreateClubModal" parent="Modals" instance=ExtResource( 18 )]
margin_left = 312.0
margin_top = 201.0
margin_right = 672.0
margin_bottom = 411.0

[node name="AddMemberModal" parent="Modals" instance=ExtResource( 13 )]
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="JoinClubModal" parent="Modals" instance=ExtResource( 19 )]
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="EditClubModal" parent="Modals" instance=ExtResource( 15 )]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="EditUserModal" parent="Modals" instance=ExtResource( 20 )]
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamRandomPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "Music"
script = ExtResource( 3 )
audio_stream_list = [ ExtResource( 22 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ) ]

[connection signal="club_changed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members" method="_on_Clubs_club_changed"]
[connection signal="show_create_club_modal" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" to="Modals/CreateClubModal" method="_on_Clubs_show_create_club_modal"]
[connection signal="show_edit_club_modal" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" to="Modals/EditClubModal" method="_on_Clubs_show_edit_club_modal"]
[connection signal="pressed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs/CreateNewButton" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" method="_on_CreateNewButton_pressed"]
[connection signal="button_toggled" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites/Invites/VBoxContainer" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites" method="_on_VBoxContainer_button_toggled"]
[connection signal="pressed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites/CreateNewButton" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Invites" method="_on_CreateNewButton_pressed"]
[connection signal="show_add_member_modal" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members" to="Modals/AddMemberModal" method="_on_Members_show_add_member_modal"]
[connection signal="pressed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members/Add" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members" method="_on_Add_pressed"]
[connection signal="show_edit_user_modal" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/Users" to="Modals/EditUserModal" method="_on_Users_show_edit_user_modal"]
[connection signal="user_changed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/Users" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/OwnedClubs" method="_on_Users_user_changed"]
[connection signal="user_changed" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/Users" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/UserClubs" method="_on_Users_user_changed"]
[connection signal="show_join_club_modal" from="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/UserClubs" to="Modals/JoinClubModal" method="_on_UserClubs_show_join_club_modal"]
[connection signal="submit" from="Modals/CreateClubModal" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" method="_on_CreateClubModal_submit"]
[connection signal="submit" from="Modals/AddMemberModal" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Members" method="_on_AddMemberModal_submit"]
[connection signal="submit" from="Modals/JoinClubModal" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/UserClubs" method="_on_JoinClubModal_submit"]
[connection signal="submit" from="Modals/EditClubModal" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Clubs/Clubs" method="_on_EditClubModal_submit"]
[connection signal="submit" from="Modals/EditUserModal" to="VBoxContainer/Tabs/PanelContainer/VBoxContainer/TabContainer/Users/Users" method="_on_EditUserModal_submit"]
[connection signal="finished" from="AudioStreamRandomPlayer" to="AudioStreamRandomPlayer" method="_on_AudioStreamRandomPlayer_finished"]
